Update API classes and methods alike to Mojmap.
This contains the meat of the API changes:

- Split sources into client and main
- Move mixin packages to top level beside impl

- Remove all Environment annotations
- Annotate packages with NotNull (thanks FAPI)
- Add verification of annotations (thanks FAPI)

- Suppress "unused" inspection in API classes

- Remove deprecated API endpoints

- Convert class, method, variable names
- Update names in comments and javadocs

- Various minor code cleanup

TODO:

* Fully remove sapling trade API
* Investigate sapling trade datagen API?
* Split and fix up wood API test mod