@@ -7,10 +7,8 @@ import com.terraformersmc.terraform.shapes.api.Quaternion;
 
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class RotateLayer implements Layer {
-
     private final Quaternion rotation;
 
     public RotateLayer(Quaternion rotation) {
@@ -23,7 +21,8 @@ public class RotateLayer implements Layer {
 
     @Override
     public Position modifyMax(Shape shape) {
-        List<Position> translatedVertices = Position.vertices(shape.max(), shape.min()).stream().map((pos) -> pos.rotateBy(rotation)).collect(Collectors.toList());
+        List<Position> translatedVertices = Position.vertices(shape.max(), shape.min()).stream().map((pos) -> pos.rotateBy(rotation)).toList();
+
         return Position.of(
                 translatedVertices.stream().map(Position::getX).max(Double::compareTo).get(),
                 translatedVertices.stream().map(Position::getY).max(Double::compareTo).get(),
@@ -33,7 +32,8 @@ public class RotateLayer implements Layer {
 
     @Override
     public Position modifyMin(Shape shape) {
-        List<Position> translatedVertices = Position.vertices(shape.max(), shape.min()).stream().map((pos) -> pos.rotateBy(rotation)).collect(Collectors.toList());
+        List<Position> translatedVertices = Position.vertices(shape.max(), shape.min()).stream().map((pos) -> pos.rotateBy(rotation)).toList();
+
         return Position.of(
                 translatedVertices.stream().map(Position::getX).min(Double::compareTo).get(),
                 translatedVertices.stream().map(Position::getY).min(Double::compareTo).get(),
@@ -43,6 +43,6 @@ public class RotateLayer implements Layer {
 
     @Override
     public Predicate<Position> modifyEquation(Shape shape) {
-        return (pos) -> shape.equation().test(pos.rotateBy(rotation.conjugate()));
+        return pos -> shape.equation().test(pos.rotateBy(rotation.conjugate()));
     }
 }
